tools/scanexr/tests/snapshots/test_solidity_ls__find_references.snap
---
source: tools/scanexr/tests/test_solidity_ls.rs
expression: snapshot
---

### input ###

contract.sol
#@#
pragma solidity ^0.8.19;

contract Contract {
    function foo() public {}
         //  ^^^ start

    function withdraw() public {
        address target = msg.sender;
        
        foo();
        foo();

        (bool sent, ) = target.call{value: 1}("");
    }
}
        
### output ###
contract.sol
#@#

pragma solidity ^0.8.19;

contract Contract {
    function foo() public {}
         //  ^^^ start

    function withdraw() public {
        address target = msg.sender;
        
        foo();
        ^^^ Meta: ()
        foo();

        (bool sent, ) = target.call{value: 1}("");
    }
}
        
---
contract.sol
#@#

pragma solidity ^0.8.19;

contract Contract {
    function foo() public {}
         //  ^^^ start

    function withdraw() public {
        address target = msg.sender;
        
        foo();
        foo();
        ^^^ Meta: ()

        (bool sent, ) = target.call{value: 1}("");
    }
}
        
